refactor: assorted fixes

--- a/app/components/lookbook/display_options/editor/component.html.erb
+++ b/app/components/lookbook/display_options/editor/component.html.erb
@@ -1,6 +1,6 @@
 <%= render_component_tag class: "px-2" do %>
   <% if fields.many? %>
-    <%= lookbook_render :button, icon: :settings, tooltip: "Display options" do |button| %>
+    <%= lookbook_render :button, id: "display-options-dropdown-button", icon: :settings, tooltip: "Display options" do |button| %>
       <% button.with_dropdown do %>
         <div class="p-3 space-y-3">
           <%= safe_join(fields) %>
