--- a/app/components/lookbook/embed/component.html.erb
+++ b/app/components/lookbook/embed/component.html.erb
@@ -1,5 +1,5 @@
 <lookbook-embed
-  app="<%= helpers.lookbook_home_url %>"
+  app="<%= lookbook_home_url %>"
   preview="<%= preview_class %>"
   scenario="<%= scenario.name %>"
   <%= params_attrs_str %> panels="<%= panels.join(",") %>"
