refactor(embeds): preview embed settings tidy up

--- a/app/views/lookbook/inspector/show.html.erb
+++ b/app/views/lookbook/inspector/show.html.erb
@@ -33,13 +33,14 @@
 
         <% toolbar.with_section divide: :left, class: "flex-none relative z-10" do %>
           <%= lookbook_render :button_group do |group| %>
-            <% if Lookbook.config.preview_embeds.enabled %>
+            <% if @engine.preview_embeds_allowed? %>
               <%= group.with_button id: "embed-generator-dropdown-button", icon: :code_2, tooltip: "Get embed code" do |button| %>
                 <% button.with_dropdown.with_content(lookbook_render :embed_code_dropdown,
                   pages: @pages,
                   preview: @preview,
                   target: @target,
-                  params: request.query_parameters
+                  params: request.query_parameters,
+                  policy: @config.preview_embeds.policy
                 ) %>
               <% end %>
             <% end %>
