--- a/app/components/lookbook/embed_code_dropdown/component.html.erb
+++ b/app/components/lookbook/embed_code_dropdown/component.html.erb
@@ -1,7 +1,10 @@
 <%= render_component_tag class:"p-3 w-[320px]" do %>  
   <h4 class="text-[11px] uppercase tracking-wider mb-2 font-bold">Preview embed code</h4>
 
-  <p class="text-xs text-gray-600 mb-3">This code can be used to embed this preview in Lookbook pages or on external sites.</p>
+  <p class="text-xs text-gray-600 mb-3">
+    This code can be used to embed this preview in
+    Lookbook pages<% unless policy == "SAMEORIGIN" %> or on external sites<% end %>.
+  </p>
 
   <div class="border-t border-lookbook-dropdown-divider pt-3 pb-3">
     <%= code :html do %><%= embed_code %><% end %>
