--- a/app/components/lookbook/nav/entity/component.html.erb
+++ b/app/components/lookbook/nav/entity/component.html.erb
@@ -17,7 +17,7 @@
         class: "nav-toggle-icon",
         "x-effect": "iconName = open ? 'chevron-down' : 'chevron-right'" if children? %>
       <%= icon nav_icon, size: 3.5, class: "mr-1.5 text-lookbook-nav-icon-stroke" %>
-      <span class="truncate <% if node.type == :preview %>font-bold<% end %>"><%= label %></span>
+      <span class="truncate <% if node.type == :preview %>font-semibold<% end %>"><%= label %></span>
     </div>
   <% end %>
   
