Updating renders many calls to use with

--- a/app/components/lookbook/page_tabs/component.html.erb
+++ b/app/components/lookbook/page_tabs/component.html.erb
@@ -2,13 +2,13 @@
   <div class="flex w-full border-b border-lookbook-divider mb-6">
     <%= lookbook_render :tabs, theme: :page do |t| %>
       <% @tabs.each do |props| %>
-        <%= t.tab **props %>
+        <%= t.with_tab **props %>
       <% end %>
     <% end %>
   </div>
   <%= lookbook_render :tab_panels do |t| %>
     <% @tabs.each do |props| %>
-      <% t.panel name: props[:name] do %>
+      <% t.with_panel name: props[:name] do %>
         <%= lookbook_render :prose, markdown: props[:markdown], class: "max-w-none flex-none" do %>
           <%== props[:tab_content] %>
         <% end %>
