--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -5,11 +5,11 @@
   @dom:update-complete.window="Lookbook.initEmbeds();">
   <div class="h-full bg-lookbook-page-bg relative">
     <% unless @error %>
-      
+
       <div class="absolute top-0 right-0 pt-1 pr-0 pl-1 pb-1 rounded-bl-md">
         <div class="bg-lookbook-page-bg opacity-90 absolute inset-0 w-full h-full z-0"></div>
         <div class="relative z-10 flex items-center">
-        
+
         <% if @previous_page %>
           <%= lookbook_render :icon_button,
             size: :lg,
@@ -58,7 +58,7 @@
         <% if @page.sections.any? %>
           <%= lookbook_render :page_tabs, id: "page-tabbed-sections", markdown: false, class: "mt-6" do |page_tabs| %>
             <% @page.sections.each do |section| %>
-              <% page_tabs.tab name: "page-section-#{section.name}", label: section.label do %>
+              <% page_tabs.with_tab name: "page-section-#{section.name}", label: section.label do %>
                 <%= page_controller.render_page(section) %>
               <% end %>
             <% end %>
