--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -1,8 +1,7 @@
 <main
   class="h-[calc(100vh_-_40px)]"
   x-data="{}"
-  @navigation:complete.window="$refs.scroller.scrollTop = 0;"
-  @dom:update-complete.window="Lookbook.initEmbeds();">
+  @navigation:complete.window="$refs.scroller.scrollTop = 0">
   <div class="h-full bg-lookbook-page-bg relative">
     <% unless @error %>
 
