--- a/app/components/lookbook/prose/component.css
+++ b/app/components/lookbook/prose/component.css
@@ -1,12 +1,19 @@
 @layer components {
   [data-component="prose"] {
+    letter-spacing: -0.015em !important;
+
     [data-component="code"] {
       @apply border border-lookbook-divider rounded-md;
     }
 
     [data-component="embed"],
-    [data-component="code"] {
+    [data-component="code"],
+    [data-lookbook-embed] {
       @apply my-8;
+    }
+
+    [data-lookbook-embed] {
+      @apply rounded-md;
     }
   }
 }
