--- a/docs/src/_components/lookbook_docs/method_list/component.html.erb
+++ b/docs/src/_components/lookbook_docs/method_list/component.html.erb
@@ -1,6 +1,6 @@
 <%= tag.section **html_attrs do %>
   <% if title %>
-    <h2 class="text-xs uppercase tracking-wider mb-4 text-gray-500"><%= title %></h2>
+    <h2 class="text-xs uppercase tracking-wider mb-4 text-gray-500" id="<%= title.parameterize %>"><%= title %></h2>
   <% end %>
   <div class="space-y-6">
     <% items.each do |item| %>
