--- a/app/assets/lookbook/css/lookbook.css
+++ b/app/assets/lookbook/css/lookbook.css
@@ -47,6 +47,12 @@
   }
 }
 
+@layer utilities {
+  .bg-checked {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cg fill='%23f3f3f3' fill-opacity='1'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
+  }
+}
+
 @layer components {
   [type="text"],
   [type="email"],
